--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.18.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts-cssmodules": "1.1.10"
+    "react-scripts-cssmodules": "1.1.10",
+    "react-slick": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
